base/nexus3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/sonatype/docker-nexus3
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"nexus3:latest","namespace":"nexus3"},"fieldPath":"spec.template.spec.containers[?(@.name==\"nexus3\")].image","pause":"false"}]'
  labels:
    app: nexus3
    app.kubernetes.io/component: nexus3
    app.kubernetes.io/instance: nexus3
    app.kubernetes.io/part-of: nexus3-app
  name: nexus3
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nexus3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nexus3
        deploymentconfig: nexus3
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/nexus3/nexus3:latest
        imagePullPolicy: Always
        name: nexus3
        resources:
          requests:
            memory: 2Gi
            cpu: 500m
          limits:
            memory: 2Gi
            cpu: 1
        ports:
        - containerPort: 8081
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /nexus-data
          name: nexus-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: nexus-data
        persistentVolumeClaim:
          claimName: nexus-data
