base/nexus3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus3
    app.kubernetes.io/component: nexus3
    app.kubernetes.io/instance: nexus3
    app.kubernetes.io/part-of: nexus3-app
  name: nexus3
  namespace: nexus3
spec:
  selector:
    app: nexus3
    deploymentconfig: nexus3
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  sessionAffinity: None
  type: ClusterIP
