base/nexus3-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nexus3
    app.kubernetes.io/component: nexus3
    app.kubernetes.io/instance: nexus3
    app.kubernetes.io/part-of: nexus3-app
  name: nexus3
spec:
  port:
    targetPort: 8081-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nexus3
    weight: 100
  wildcardPolicy: None
